# imt

./: .gitignore  pyproject.toml  readme.md
conversion/: conversion-rnno-rO.py  conversion-rnno.py  conversion_ring.py  conversion_ring_v0_tmlr.py
examples/: TK.ipynb  VW_baby.py  benchmark_diodem.py  demo_my_defense.py  embc_results.py  lower_extremities.ipynb  lower_extremities_2.ipynb
examples/data/: data_lower_extremities_human.pickle
examples/data/head_chest/: chest.csv  head.csv
examples/data/head_chest_bike/: chest.csv  head.csv
examples/data/knee_tracking1/: femur.csv  tibia.csv
examples/data/knee_tracking2/: femur.csv  tibia.csv
examples/data/shoulder_tracking/: chest.csv  upperarm.csv
examples/embc_results/: embc_results_3DOF.py  embc_trans_invariance.py
src/imt/: __init__.py  _base.py  _graph.py  _solutions.py  _solver.py
src/imt/methods/: __init__.py  _calibrate.py  _dead_reckoning.py  _jpos.py  _madgwick.py  _noop.py  _qmt.py  _riann.py  _ring.py  _rnno.py  _vqf.py
src/imt/utils/: __init__.py  _diodem_utils.py  _print_graph.py  _view.py  view.py
src/imt/wrappers/: __init__.py  _calibrate.py  _dead_reckoning.py  _fractual_stepping.py  _joint_tracker.py  _jpos.py  _lpf.py
tests/: test_jpos.py  test_riann.py
to_onnx/: conversion-2024-12-03.py
