[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imt-imt"
version = "0.0.10"
authors = [
  { name="Simon Bachhuber", email="simon.bachhuber@fau.de" },
]
description = "High-level Interface to Inertial Motion Tracking"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qmt",
    "onnxruntime",
    "dm-tree",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/SimiPixel/imt"
Issues = "https://github.com/SimiPixel/imt/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"imt.methods.onnx" = ["**/*.onnx", "**/*.npy"]
